--- a/app/views/theft_alert_plans/_theft_alert_plan.html.haml
+++ b/app/views/theft_alert_plans/_theft_alert_plan.html.haml
@@ -6,19 +6,21 @@
     .detail-card-title
       = theft_alert_plan.name
       - if is_preferred
-        .preferred-tag Best value
+        .preferred-tag= t(".best_value")
+
     .detail-card
       .detail-card-subtitle
-        %strong
-          = number_with_delimiter(theft_alert_plan.views)
-        Views
+        %strong= number_with_delimiter(theft_alert_plan.views)
+        = t(".views")
+
       .detail-card-subtitle
         %strong= theft_alert_plan.duration_days
-        Days
+        = t(".days")
+
       .detail-card-subtitle.detail-card-price
         = number_to_currency(theft_alert_plan.amount_cents / 100.0, unit: "$", separator: ".")
+
     .detail-card-content-main
       = theft_alert_plan.description_html.html_safe
-    .detail-card-subtitle.detail-card-footer.js-plan-select{ |
-      class: "#{'selected' if is_selected}", |
-      data: { theft_alert_plan_id: theft_alert_plan.id } }
+
+    .detail-card-subtitle.detail-card-footer.js-plan-select{ class: "#{'selected' if is_selected}", data: { theft_alert_plan_id: theft_alert_plan.id } }
