--- a/app/views/admin/ctypes/index.html.haml
+++ b/app/views/admin/ctypes/index.html.haml
@@ -26,4 +26,4 @@
           %td
             = ctype.cgroup.name.titleize
           %td.large-screens
-            = "&#x2713;".html_safe if ctype.image?
+            = check_mark if ctype.image?
