--- a/app/views/admin/mail_snippets/index.html.haml
+++ b/app/views/admin/mail_snippets/index.html.haml
@@ -30,4 +30,4 @@
           %td
             = mail_snippet.address
           %td.table-cell-check
-            = "&#x2713;".html_safe if mail_snippet.is_enabled
+            = check_mark if mail_snippet.is_enabled
