--- a/app/views/bikes/_organized_access_panel.html.haml
+++ b/app/views/bikes/_organized_access_panel.html.haml
@@ -75,7 +75,7 @@
                       = l @bike.created_at, format: :convert_time
                 %tr
                   %td= t(".claimed")
-                  %td= "&#x2713;".html_safe if @bike.claimed?
+                  %td= check_mark if @bike.claimed?
                 %tr
                   %td= t(".creator")
                   %td
