--- a/app/views/admin/recoveries/_table.html.haml
+++ b/app/views/admin/recoveries/_table.html.haml
@@ -77,11 +77,11 @@
               = recovery.city
           %td.table-cell-check
             / Posted
-            / = "&#x2713;".html_safe if recovery.recovery_posted
-            = "&#x2713;".html_safe if recovery.index_helped_recovery
+            / = check_mark if recovery.recovery_posted
+            = check_mark if recovery.index_helped_recovery
           %td.table-cell-check
-            = "&#x2713;".html_safe if recovery.can_share_recovery
+            = check_mark if recovery.can_share_recovery
           %td.table-cell-check
             - if recovery.recovery_display.present?
-              = link_to "&#x2713;".html_safe, edit_admin_recovery_display_url(recovery.recovery_display)
+              = link_to check_mark, edit_admin_recovery_display_url(recovery.recovery_display)
 
