--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -23,7 +23,7 @@
           %td
             Email: Newsletters
           %td
-            = "&#x2713;".html_safe if @user.notification_newsletters
+            = check_mark if @user.notification_newsletters
         %tr
           %td
             Vendor terms?
@@ -35,7 +35,7 @@
           %td
             Email: Unstolen
           %td
-            = "&#x2713;".html_safe if @user.notification_unstolen
+            = check_mark if @user.notification_unstolen
         %tr
           %td
             Created
@@ -63,7 +63,7 @@
           Confirmed?
         %td
           - if @user.confirmed?
-            = "&#x2713;".html_safe
+            = check_mark
       %tr
         %td
           email
@@ -98,7 +98,7 @@
         %td
           Ambassador?
         %td
-          = "&#x2713;".html_safe if @user.ambassador?
+          = check_mark if @user.ambassador?
       %tr
         %td
           Phone
@@ -162,7 +162,7 @@
         %td
           = payment.amount
         %td
-          = "&#x2713;".html_safe if payment.is_payment
+          = check_mark if payment.is_payment
 
 .row
   .col-md-6
@@ -197,9 +197,9 @@
                 = l user_email.created_at, format: :convert_time
           %td= user_email.email
           %td
-            = "&#x2713;".html_safe if user_email.confirmed
+            = check_mark if user_email.confirmed
           %td
-            = "&#x2713;".html_safe if user_email.primary
+            = check_mark if user_email.primary
           %td
             = user_email.old_user_id
 
