--- a/app/views/welcome/user_home.html.haml
+++ b/app/views/welcome/user_home.html.haml
@@ -87,7 +87,7 @@
           = link_to t(".add_a_bike"), choose_registration_path, class: "btn btn-primary btn-lg"
           = link_to t(".add_a_lock"), new_lock_url, class: "btn btn-primary-offset btn-lg"
         %h3
-          = t(".add_some_info")
+          = t(".next_steps")
         .inner.last-item
           - if @bikes.present?
             .lock-group
