Externalize public_images/edit.html.erb

--- a/app/views/public_images/edit.html.erb
+++ b/app/views/public_images/edit.html.erb
@@ -1,23 +1,21 @@
-<section class="bibox-top">    
+<section class="bibox-top">
   <%= link_to edit_bike_url(@public_image.imageable), class: "back" do %>
-    <span>Back Arrow</span>Back to <em>Editing Bike</em>
+    <%= t(".editing_bike_html") %>
   <% end %>
 
   <h2>
     <% if current_user.email == @public_image.imageable.owner_email %>
       <% end %>
   </h2>
-  
+
   <div class="headline-content-edit">
-    <h1>
-      Editing Image
-    </h1>
+    <h1><%= t(".editing_image") %></h1>
   </div>
 </section>
 
 <div class="row-fluid">
-  <div class="padded span6"> 
-    <div class="well"><%= render 'form' %></div>
+  <div class="padded span6">
+    <div class="well"><%= render "form" %></div>
   </div>
   <div class="padded span6"><%= link_to image_tag(@public_image.image_url(:medium)), @public_image.image_url, target: "_blank" %></div>
 
