--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -1,8 +1,15 @@
 <% skip_order ||= false %>
 <li class="public_image" id="<%= public_image.id %>">
-  <div class='processing'><%= t(".processing") %></div>
+  <div class='processing'>
+    <%= t(".processing") %>
+  </div>
+
   <%= image_tag(public_image.image_url(:small)) if public_image.image? %>
-  <div class="name"><%= public_image.name.truncate(18) %></div>
+
+  <div class="name">
+    <%= public_image.name.truncate(18) %>
+  </div>
+
   <div class="actions">
     <% if public_image.imageable_type != 'Blog' %>
       <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="<%= t(".enter_text_here") %>"&gt;</textarea>
@@ -11,7 +18,7 @@
       <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="<%= t(".enter_text_here") %>"&gt;</textarea>
       <p>
         <span><%= t(".copy_and_paste_in_post") %></span>
-        <%= link_to "Delete image", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "photo-remove" %>
+        <%= link_to t(".delete_image"), public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "photo-remove" %>
       </p>
     <% end %>
   </div>
