--- a/app/views/admin/tweets/edit.html.haml
+++ b/app/views/admin/tweets/edit.html.haml
@@ -5,9 +5,11 @@
   .col-auto
     %small
     = link_to @tweet.tweet_link.gsub(/https?..\//, ''), @tweet.tweet_link, target: '_blank'
+
 = form_for [:admin, @tweet], url: { action: 'update', controller: 'tweets' } do |f|
   - if @tweet.errors.any?
-    = render partial: "/shared/errors", locals: { name: "Tweet", obj: @tweet}
+    = render partial: "shared/errors", locals: { name: "Tweet", obj: @tweet}
+
   .row.mt-4
     .col-md-3.my-auto
       .form-group
@@ -34,11 +36,13 @@
           .form-check
             = f.check_box :remove_image, class: "form-check-input"
             = f.label :remove_image, class: "form-check-label"
+
   .row
     .col-md-4
       .form-group
         = f.label :body_html, 'Tweet display html'
         = f.text_area :body_html, rows: 4, class: "form-control"
+
     .col-md-8.my-auto
       .form-group
         %em
@@ -55,6 +59,7 @@
           .form-check-inline.form-check
             = f.radio_button :alignment, 'bottom-right', class: "form-check-input"
             = f.label :alignment, "Bottom-right", {:for => "tweet_alignment_bottom-right", class: "form-check-label pl-0"}
+
   .row.justify-content-end
     .col-auto
       = f.submit "Save", class: "btn btn-success"
@@ -64,21 +69,23 @@
       method: :delete,
       class: "btn btn-danger"
 
-%h3
-  Landing page rendering:
-.mt-4
 %hr
-.mt-4
+
+%h3 Landing page rendering
 .container
   .row
     .landing-why-col.clearfix
-      = render partial: '/landing_pages/tweet', locals: { tweet_id: @tweet.id }
+      = render partial: 'landing_pages/tweet', locals: { tweet_id: @tweet.id }
 
-.mt-4
+- if @tweet.retweets.any?
+  %hr
+  %h3 Retweets
+  = render "admin/tweets/tweets", tweets: @tweet.retweets
+
 %hr
-.row
-  .col-auto
-    %label
-      Twitter response data
-    %pre
+
+%h3 Twitter Response Data
+.container
+  .row
+    %pre{style: "max-height: 400px; overflow: scroll;"}
       = @tweet.twitter_response.to_yaml
