--- a/app/views/public_images/_public_image.html.erb
+++ b/app/views/public_images/_public_image.html.erb
@@ -1,21 +1,31 @@
 <% skip_order ||= false %>
 <li class="public_image" id="<%= public_image.id %>">
-  <div class='processing'>... processing</div>
+  <div class='processing'>
+    <%= t(".processing") %>
+  </div>
+
   <%= image_tag(public_image.image_url(:small)) if public_image.image? %>
-  <div class="name"><%= public_image.name.truncate(18) %></div>
+
+  <div class="name">
+    <%= public_image.name.truncate(18) %>
+  </div>
+
   <div class="actions">
     <% if public_image.imageable_type != 'Blog' %>
-      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
-      <p><span>Copy the above text and paste it where you'd like it to appear</span></p>
+      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="<%= t(".enter_text_here") %>"&gt;</textarea>
+      <p><span><%= t(".copy_and_paste") %></span></p>
     <% else %>
-      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="ENTER YOUR TEXT HERE"&gt;</textarea>
+      <textarea class="code-to-enter">&lt;img class="post-image" src="<%= public_image.image_url %>" alt="<%= t(".enter_text_here") %>"&gt;</textarea>
       <p>
-        <span>Copy the above text and paste it where you'd like it to appear in the post</span>
-        <%= link_to "Delete image", public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "photo-remove" %>
+        <span><%= t(".copy_and_paste_in_post") %></span>
+        <%= link_to t(".delete_image"), public_image_url(public_image, return_url: edit_admin_news_url(@blog)), method: :delete, class: "photo-remove" %>
       </p>
     <% end %>
   </div>
+
   <% unless skip_order %>
-    <div class="index-image-select"><input type="radio" name="index_image_id" value="<%= public_image.id %>" class="index_image_<%= public_image.id %>"></div>
+    <div class="index-image-select">
+      <input type="radio" name="index_image_id" value="<%= public_image.id %>" class="index_image_<%= public_image.id %>">
+    </div>
   <% end %>
 </li>
