display phone for stolen_record

--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -180,7 +180,7 @@
               %td
                 Phone
               %td
-                = stolen_record.phone
+                = stolen_record.phone_display
                 - if stolen_record.secondary_phone.present?
                   %br
                   %small
