--- a/app/views/recovery_displays/_recovery_display.html.haml
+++ b/app/views/recovery_displays/_recovery_display.html.haml
@@ -18,7 +18,7 @@
 
       %span.h4recovery
         - bike_type = recovery_display&.bike&.type&.titleize.presence || t(".bike")
-        - date = l(recovery_display.date_recovered, format: :dotted)
+        - date = l(recovery_display.recovered_at, format: :dotted)
         - recovery_date = content_tag(:span, t(".recovered_date", date: date), class: "recover-date")
         - recovery_text = safe_join([bike_type, recovery_date], " ")
 
