--- a/app/views/admin/bikes/_bike.html.haml
+++ b/app/views/admin/bikes/_bike.html.haml
@@ -210,9 +210,9 @@
               %td
                 Recovered at
               %td
-                - if stolen_record.date_recovered.present?
+                - if stolen_record.recovered_at.present?
                   %span.convertTime{ href: bike.present? ? admin_bike_url(bike) : "#" }
-                    = l stolen_record.date_recovered, format: :convert_time
+                    = l stolen_record.recovered_at, format: :convert_time
             %tr
               %td
                 Recovered by
