--- a/app/views/admin/recovery_displays/index.html.haml
+++ b/app/views/admin/recovery_displays/index.html.haml
@@ -36,7 +36,7 @@
           %td
             .less-strong-hold
               %a.convertTime{ href: edit_admin_recovery_display_url(recovery_display) }
-                = l recovery_display.date_recovered, format: :convert_time
+                = l recovery_display.recovered_at, format: :convert_time
               %small.less-strong-right
                 = recovery_display.id
           %td
