--- a/app/views/bikes/edit_groups.html.haml
+++ b/app/views/bikes/edit_groups.html.haml
@@ -11,6 +11,7 @@
             %p= t(".are_you_part_of_a_school_want_to_bolster_")
 
           - if @bike.bike_organizations.any?
+            = hidden_field_tag :organization_ids_can_edit_claimed_present, true
             .related-fields.no-divider-row
               - if @bike.bike_organizations.where(organization_id: @bike.creation_organization_id) && @bike.creation_organization
                 .form-group.row
