--- a/app/views/admin/twitter_accounts/new.html.haml
+++ b/app/views/admin/twitter_accounts/new.html.haml
@@ -1,9 +1,5 @@
-.admin-subnav
-  .col-6
-    = link_to 'View all Twitter accounts', admin_twitter_accounts_url
-
-.container
-  %h1 New Twitter Account
+.container-fluid
+  %h1.mb-4 New Twitter Account
 
   = render "form",
     twitter_account: @twitter_account,
