show twitter account errors on stolen approval pages

--- a/app/views/admin/stolen_bikes/edit.html.haml
+++ b/app/views/admin/stolen_bikes/edit.html.haml
@@ -1,5 +1,7 @@
 = render partial: "admin/bikes/bike", locals: { bike: @bike, target: "show", stolen_record: @stolen_record }
 
+= render partial: "/admin/twitter_accounts/errored"
+
 %h3 Public Images
 
 .row.mt-2.mb-4
